Adicion de paginacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url:jdbc:h2:mem:clientesdb
-spring.datasource.username:edwin
-spring.datasource.password:sa
-
-spring.h2.console.enabled=true
+spring.datasource.url:jdbc:mysql://localhost/db_springboot?serverTimezone=UTC
+spring.datasource.username:root
+spring.datasource.password:p4rr4les
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.org.hibernate.sql=debug
 
 
 
